adding language json and fixing phone number format

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,4 +1,5 @@
 {
 	"Welcome to Way Fong": "Welcome to Way Fong",
-	"Please enter your details for us to connect with you": "Please enter your details for us to connect with you"
+	"https://wayfong.com/": "https://wayfong.com/",
+	"Company Name*": "Company Name*"
 }
