--- a/src/locale/zh.json
+++ b/src/locale/zh.json
@@ -1,4 +1,60 @@
 {
 	"Welcome to Way Fong": "欢迎来到威丰",
-	"Please enter your details for us to connect with you": "请输入您的详细信息，以便我们与您联系"
+	"Please enter your details for us to connect with you": "请输入您的详细信息，以便我们与您联系",
+	"https://wayfong.com/": "https://wayfong.com/",
+	"Company Name": "公司名称",
+	"Contact Person": "联络人",
+	"Business Type": "业务类型",
+	"Phone Number": "电话号码",
+	"Invalid USA phone number": "美国电话号码无效",
+	"Email Address": "电子邮件地址",
+	"Invalid email address!": "无效的邮件地址！",
+	"Shipping Address": "收件地址",
+	"Address line 1": "地址第一行",
+	"Address line 2": "地址行2",
+	"Zip Code": "邮政编码",
+	"State": "状态",
+	"City": "城市 ",
+	"Country": "国家",
+	"Use it as my Billing Address": "使用它作为我的帐单地址",
+	"Payment Information": "支付信息",
+	"Pay Term": "付款期限",
+	"Pay Type": "薪资类型",
+	"Quarterly": "季刊",
+	"Bi- Monthly": "双月刊",
+	"Monthly": "每月",
+	"Weekly": "每周",
+	"Pay Type*": "付费类型*",
+	"Cash": "现金",
+	"Card": "卡片",
+	"Cheque": "查看",
+	"Company's Turnover (per annum)": "公司营业额（每年）",
+	"Interested product Category": "感兴趣的产品类别",
+	"General": "一般的",
+	"Cooked Food": "熟食",
+	"Roasted Meat": "烤肉",
+	"Meat": "肉",
+	"Dim Sum": "点心",
+	"Grocery": "杂货店",
+	"Seafood": "海鲜",
+	"Tofu": "豆腐",
+	"Preferred Products": "首选产品",
+	"Preferred Product": "首选产品",
+	"Order Frequency": "订购频率",
+	"Quantity": "数量",
+	"Quantity Unit": "数量单位",
+	"Lbs": "磅",
+	"Cases": "案例",
+	"Add Product": "添加产品",
+	"Delivery Option": "交付选项",
+	"Preferred time to contact": "首选联系时间",
+	"**Select at least 2 slots": "**选择至少2个插槽",
+	"Comment": "评论",
+	"*Mandatory fields": "*必须填写",
+	"Submit": "提交",
+	"Thank you For your Interest!": "感谢您的关注!",
+	"Something went wrong": "出了些问题",
+	"Our Sales Associate will get back to you.": "我们的销售助理将给您回复。",
+	"Uh-oh your form submission has failed, Please try again": "呃哦您的表单提交失败，请重试",
+	"This field is required!": "此字段是必需的！"
 }
