fixing language thank you page

--- a/src/locale/zh.json
+++ b/src/locale/zh.json
@@ -52,9 +52,9 @@
 	"Comment": "评论",
 	"*Mandatory fields": "*必须填写",
 	"Submit": "提交",
-	"Thank you For your Interest!": "感谢您的关注!",
+	"Thank you for your interest!": "感谢您的关注!",
 	"Something went wrong": "出了些问题",
-	"Our Sales Associate will get back to you.": "我们的销售助理将给您回复。",
+	"Our sales associate will get back to you.": "我们的销售助理将给您回复。",
 	"Uh-oh your form submission has failed, Please try again": "呃哦您的表单提交失败，请重试",
 	"This field is required!": "此字段是必需的！"
 }
