--- a/src/locale/zh.json
+++ b/src/locale/zh.json
@@ -2,7 +2,7 @@
 	"Welcome to Way Fong": "欢迎来到威丰",
 	"Please enter your details for us to connect with you": "请输入您的详细信息，以便我们与您联系",
 	"https://wayfong.com/": "https://wayfong.com/",
-	"Please enter only letters and spaces.": "请仅输入字母和空格。",
+	"Only numbers, letters, spaces, comma, slash and ash are allowed.": "只允许使用数字、字母、空格、逗号、斜线和灰分。",
 	"Company Name": "公司名称",
 	"Contact Person": "联络人",
 	"Business Type": "业务类型",
